--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     </head>
     <body>
        <div class="main__container">
-       	<div class="cat__container">
-       		<img src="./img/cat.jpg" alt="Cat">
-       	</div>
+       	<div class="cat__container"></div>
        	<div class="buttons__container">
        		<div class="numberOfClicks"></div>
        		<button class="resetButton">Reset</button>
