--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Udacity Cat clicker</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="./css/style.css" rel="stylesheet">
-    </head>
-    <body>
-       <div class="main__container">
-       	<div class="cat__container"></div>
-       	<div class="buttons__container">
-       		<div class="numberOfClicks"></div>
-       		<button class="resetButton">Reset</button>
-       	</div>
-       </div>
 
-        <script src="./js/script.js"></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Udacity Cat clicker</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="./css/style.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="main__container">
+        <div class="cat__container"></div>
+        <aside class="listOfCats"></aside>
+    </div>
+    <div class="buttons__container">
+            <button class="resetButton">Reset</button>
+        </div>
+    <script src="./js/script.js"></script>
+</body>
+
 </html>
