On admin button click change additional view

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <aside class="listOfCats"></aside>
     </div>
     <div class="buttons__container">
-            <button class="resetButton">Reset</button>
-        </div>
+        <button class="adminButton">Admin</button>
+        <button class="resetButton">Reset</button>
+    </div>
     <script src="./js/script.js"></script>
 </body>
 
